tests/test180.rael.exp
Error [tests/test180.rael:1:5]: Expected 1 or 2 arguments
| log Range()
|     ^
